--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -1,3 +1,17 @@
 .app {
 
 }
+
+.status {
+  width: 10px;
+  height: 10px;
+  background: red;
+  display: block;
+  float: left;
+  margin: 10px;
+  border-radius: 50%;
+
+  &.checked-in {
+    background: green;
+  }
+}
