--- a/app/app.component.scss
+++ b/app/app.component.scss
@@ -1,1 +1,18 @@
-.app {}
+.nav {
+  margin: 0 0 10px;
+  padding: 0 0 20px;
+  border-bottom: 1px solid #ccc;
+
+  a {
+    background: #eee;
+    color: #363c48;
+    padding: 4px 10px;
+    margin: 0 2px;
+    border-radius: 2px;
+
+    &.active {
+      color: #b690f1;
+      background: #363c48;
+    }
+  }
+}
